--- a/Source/WebKit/ChangeLog
+++ b/Source/WebKit/ChangeLog
@@ -1,5 +1,42 @@
 2020-01-28  Russell Epstein  <repstein@apple.com>
 
+        Cherry-pick r254706. rdar://problem/58183380
+
+    Add finite timeout when synchronously terminating a service worker
+    https://bugs.webkit.org/show_bug.cgi?id=206325
+    <rdar://problem/58183380>
+    
+    Patch by Alex Christensen <achristensen@webkit.org> on 2020-01-16
+    Reviewed by Youenn Fablet.
+    
+    When this message reply is never received, it hangs everything.
+    If we haven't received verification that a service worker was terminated in 10 seconds, unhang everything
+    and tell the UI process to terminate the hanging service worker process. Continue handling messages during
+    these 10 seconds to hopefully turn a bad hang into no perceptible hang.
+    
+    * NetworkProcess/ServiceWorker/WebSWServerToContextConnection.cpp:
+    (WebKit::WebSWServerToContextConnection::syncTerminateWorker):
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254706 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2020-01-16  Alex Christensen  <achristensen@webkit.org>
+
+            Add finite timeout when synchronously terminating a service worker
+            https://bugs.webkit.org/show_bug.cgi?id=206325
+            <rdar://problem/58183380>
+
+            Reviewed by Youenn Fablet.
+
+            When this message reply is never received, it hangs everything.
+            If we haven't received verification that a service worker was terminated in 10 seconds, unhang everything
+            and tell the UI process to terminate the hanging service worker process. Continue handling messages during
+            these 10 seconds to hopefully turn a bad hang into no perceptible hang.
+
+            * NetworkProcess/ServiceWorker/WebSWServerToContextConnection.cpp:
+            (WebKit::WebSWServerToContextConnection::syncTerminateWorker):
+
+2020-01-28  Russell Epstein  <repstein@apple.com>
+
         Cherry-pick r254552. rdar://problem/58536702
 
     REGRESSION (r253394): After swiping back during a navigation, WKWebView gets stuck with the forward content, stops repainting
