--- a/Source/WebKit/ChangeLog
+++ b/Source/WebKit/ChangeLog
@@ -1,5 +1,34 @@
 2020-01-28  Russell Epstein  <repstein@apple.com>
 
+        Cherry-pick r254989. rdar://problem/58764572
+
+    [iOS] Camera is lost during WebRTC demo
+    https://bugs.webkit.org/show_bug.cgi?id=206613
+    <rdar://problem/58764572>
+    
+    Patch by Per Arne Vollan <pvollan@apple.com> on 2020-01-23
+    Reviewed by Brent Fulgham.
+    
+    Fix observed sandbox violations in the Networking process.
+    
+    * Resources/SandboxProfiles/ios/com.apple.WebKit.Networking.sb:
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254989 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2020-01-23  Per Arne Vollan  <pvollan@apple.com>
+
+            [iOS] Camera is lost during WebRTC demo
+            https://bugs.webkit.org/show_bug.cgi?id=206613
+            <rdar://problem/58764572>
+
+            Reviewed by Brent Fulgham.
+
+            Fix observed sandbox violations in the Networking process.
+
+            * Resources/SandboxProfiles/ios/com.apple.WebKit.Networking.sb:
+
+2020-01-28  Russell Epstein  <repstein@apple.com>
+
         Cherry-pick r254938. rdar://problem/58581906
 
     Fix SDK availability macros
