--- a/Source/WebKit/ChangeLog
+++ b/Source/WebKit/ChangeLog
@@ -1,5 +1,62 @@
 2020-01-28  Russell Epstein  <repstein@apple.com>
 
+        Cherry-pick r255132. rdar://problem/58871371
+
+    Protect against crashes during WKWebView init function when methods are called before the view is fully initialized
+    https://bugs.webkit.org/show_bug.cgi?id=206799
+    rdar://problem/58871371
+    
+    Reviewed by Sam Weinig.
+    
+    Part way through creating WKWebView, some methods can be called and they need to be careful
+    not to use anything that may not be initialized yet.
+    
+    * UIProcess/API/Cocoa/WKWebView.mm:
+    (-[WKWebView dealloc]): Check _page for null, since this might happen if the superclass's
+    init method returned nil.
+    
+    * UIProcess/API/ios/WKWebViewIOS.mm:
+    (-[WKWebView _frameOrBoundsChanged]): Check _page for null, since this might be called
+    before object initialization is complete.
+    (-[WKWebView setSemanticContentAttribute:]): Ditto.
+    
+    * UIProcess/API/mac/WKWebViewMac.mm:
+    (-[WKWebView setFrameSize:]): Check _impl for null since this might be called before
+    oject initialization is complete.
+    (-[WKWebView setUserInterfaceLayoutDirection:]): Ditto.
+    (-[WKWebView renewGState]): Ditto.
+    
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255132 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2020-01-26  Darin Adler  <darin@apple.com>
+
+            Protect against crashes during WKWebView init function when methods are called before the view is fully initialized
+            https://bugs.webkit.org/show_bug.cgi?id=206799
+            rdar://problem/58871371
+
+            Reviewed by Sam Weinig.
+
+            Part way through creating WKWebView, some methods can be called and they need to be careful
+            not to use anything that may not be initialized yet.
+
+            * UIProcess/API/Cocoa/WKWebView.mm:
+            (-[WKWebView dealloc]): Check _page for null, since this might happen if the superclass's
+            init method returned nil.
+
+            * UIProcess/API/ios/WKWebViewIOS.mm:
+            (-[WKWebView _frameOrBoundsChanged]): Check _page for null, since this might be called
+            before object initialization is complete.
+            (-[WKWebView setSemanticContentAttribute:]): Ditto.
+
+            * UIProcess/API/mac/WKWebViewMac.mm:
+            (-[WKWebView setFrameSize:]): Check _impl for null since this might be called before
+            oject initialization is complete.
+            (-[WKWebView setUserInterfaceLayoutDirection:]): Ditto.
+            (-[WKWebView renewGState]): Ditto.
+
+2020-01-28  Russell Epstein  <repstein@apple.com>
+
         Cherry-pick r255039. rdar://problem/58713379
 
     Background thread with ITP Database should lock when the network process is suspended
