--- a/LayoutTests/imported/w3c/ChangeLog
+++ b/LayoutTests/imported/w3c/ChangeLog
@@ -1,3 +1,30 @@
+2020-01-28  Russell Epstein  <repstein@apple.com>
+
+        Cherry-pick r255166. rdar://problem/58841339
+
+    [iOS Release and Mac Release] imported/w3c/web-platform-tests/webrtc/RTCDTMFSender-ontonechange.https.html is flaky failing
+    https://bugs.webkit.org/show_bug.cgi?id=206683
+    <rdar://problem/58841339>
+    
+    Reviewed by Eric Carlson.
+    
+    * web-platform-tests/webrtc/RTCDTMFSender-helper.js:
+    Move from async_test to promise_test to improve repeatability of the tests.
+    
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255166 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2020-01-27  youenn fablet  <youenn@apple.com>
+
+            [iOS Release and Mac Release] imported/w3c/web-platform-tests/webrtc/RTCDTMFSender-ontonechange.https.html is flaky failing
+            https://bugs.webkit.org/show_bug.cgi?id=206683
+            <rdar://problem/58841339>
+
+            Reviewed by Eric Carlson.
+
+            * web-platform-tests/webrtc/RTCDTMFSender-helper.js:
+            Move from async_test to promise_test to improve repeatability of the tests.
+
 2020-01-10  Yusuke Suzuki  <ysuzuki@apple.com>
 
         [WebCore] Fix crash in module loader due to change in fragment reservation
