--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,5 +1,27 @@
 2020-01-28  Russell Epstein  <repstein@apple.com>
 
+        Cherry-pick r254697. rdar://problem/58649476
+
+    REGRESSION: [ Mac Debug WK1 ] inspector/page/overrideSetting-ICECandidateFilteringEnabled.html is a flaky failure
+    https://bugs.webkit.org/show_bug.cgi?id=206362
+    
+    Unreviewed test gardening.
+    
+    * platform/mac-wk1/TestExpectations:
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254697 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2020-01-16  Truitt Savell  <tsavell@apple.com>
+
+            REGRESSION: [ Mac Debug WK1 ] inspector/page/overrideSetting-ICECandidateFilteringEnabled.html is a flaky failure
+            https://bugs.webkit.org/show_bug.cgi?id=206362
+
+            Unreviewed test gardening.
+
+            * platform/mac-wk1/TestExpectations:
+
+2020-01-28  Russell Epstein  <repstein@apple.com>
+
         Cherry-pick r255153. rdar://problem/58839955
 
     REGRESSION: [Mac wk2] fast/animation/request-animation-frame.html is flaky failing
