--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,5 +1,37 @@
 2020-01-28  Russell Epstein  <repstein@apple.com>
 
+        Cherry-pick r254834. rdar://problem/58612520
+
+    REGRESSION (r250655?): [ Mac Debug ] inspector/runtime/promise-native-getter.html is a flaky timeout
+    https://bugs.webkit.org/show_bug.cgi?id=206303
+    <rdar://problem/58612520>
+    
+    Reviewed by Darin Adler.
+    
+    Rework the test to not be reliant on real world timing.
+    
+    * inspector/runtime/promise-native-getter.html:
+    * inspector/runtime/promise-native-getter-expected.txt:
+    * platform/mac/TestExpectations:
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254834 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2020-01-20  Devin Rousso  <drousso@apple.com>
+
+            REGRESSION (r250655?): [ Mac Debug ] inspector/runtime/promise-native-getter.html is a flaky timeout
+            https://bugs.webkit.org/show_bug.cgi?id=206303
+            <rdar://problem/58612520>
+
+            Reviewed by Darin Adler.
+
+            Rework the test to not be reliant on real world timing.
+
+            * inspector/runtime/promise-native-getter.html:
+            * inspector/runtime/promise-native-getter-expected.txt:
+            * platform/mac/TestExpectations:
+
+2020-01-28  Russell Epstein  <repstein@apple.com>
+
         Cherry-pick r254697. rdar://problem/58649476
 
     REGRESSION: [ Mac Debug WK1 ] inspector/page/overrideSetting-ICECandidateFilteringEnabled.html is a flaky failure
