--- a/Source/WebCore/ChangeLog
+++ b/Source/WebCore/ChangeLog
@@ -1,3 +1,24 @@
+2020-01-28  Carlos Garcia Campos  <cgarcia@igalia.com>
+
+        [GTK] Should use light theme unless website declares support for dark themes in color-schemes property
+        https://bugs.webkit.org/show_bug.cgi?id=197947
+
+        Reviewed by Michael Catanzaro.
+
+        * dom/Document.cpp:
+        (WebCore::Document::useDarkAppearance const): Remove HAVE(OS_DARK_MODE_SUPPORT) because ENABLE(DARK_MODE_CSS)
+        guards should be enough.
+        * page/FrameView.cpp:
+        (WebCore::FrameView::updateBackgroundRecursively): Revert changes made in r244635.
+        * page/Page.cpp:
+        (WebCore::Page::effectiveAppearanceDidChange): Use ENABLE(DARK_MODE_CSS) instead of HAVE(OS_DARK_MODE_SUPPORT).
+        (WebCore::Page::useDarkAppearance const): Ditto.
+        * rendering/RenderThemeGtk.cpp:
+        (WebCore::RenderThemeGtk::systemColor const): Revert changes made in r244635.
+        * rendering/RenderThemeGtk.h:
+        * testing/InternalSettings.cpp:
+        (WebCore::InternalSettings::setUseDarkAppearanceInternal): Revert changes made in r244635.
+
 2020-01-06  Fujii Hironori  <Hironori.Fujii@sony.com>
 
         ComplexTextController::offsetForPosition returns a wrong offset for a glyph boundary in a RTL text
