--- a/Source/WebKit/ChangeLog
+++ b/Source/WebKit/ChangeLog
@@ -1,3 +1,20 @@
+2020-01-29  Tim Horton  <timothy_horton@apple.com>
+
+        REGRESSION (r255322): macCatalyst: Tapping in an input field doesn't change the selection location
+        https://bugs.webkit.org/show_bug.cgi?id=206978
+
+        Reviewed by Wenson Hsieh.
+
+        * WebProcess/WebCoreSupport/WebChromeClient.h:
+        * WebProcess/WebCoreSupport/ios/WebChromeClientIOS.mm:
+        (WebKit::WebChromeClient::shouldUseMouseEventForSelection):
+        (WebKit::WebChromeClient::shouldUseMouseEventsForSelection): Deleted.
+        Allow single-click events to change the selection; this is required
+        in order to allow WebCore to set the selection in the case that
+        the UITextInteraction gestures haven't yet been installed. Continue
+        to not allow multi-click events to change the selection, because
+        these are the ones that conflict with UIKit's behaviors.
+
 2020-01-29  Commit Queue  <commit-queue@webkit.org>
 
         Unreviewed, rolling out r254379.
